--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
 # Site settings
 title: Freeeeeedom # 你的博客名字，可以定义修订
 header-img: "img/cuta.png"
-tagline: "cn"  
+tagline: "cn"
 description: "Freeeeeedom!"  # 一句话描述你的博客
 baseurl: ""
-url: "http://cnfeat"  # 此处填写你的博客地址 
+url: "http://cnfeat"  # 此处填写你的博客地址
 
 # About/contact
-owner: 
+owner:
   name: "Freeeeeedom" # 填写作者信息：名字
   email: Freeeeeedom@gmail.com # 填写作者信息：邮箱
   bio: "Freeeeeedom" # 填写作者信息：博客描述
@@ -17,15 +17,15 @@ gavatar: img/favicon.png # 浏览器地址栏小图标，可自定义更改
 favicon: img/favicon.png # 浏览器地址栏小图标，可自定义更改
 
 douban_username:  # 你的豆瓣id
-twitter_username: Freeeeeedom2
-github_username: 
-facebook_username: 
-weibo_username: 
-zhihu_username: 
+twitter_username: Freeeeeedooms
+github_username:
+facebook_username:
+weibo_username:
+zhihu_username:
 
-# Build settings  
-# use Github Flavored Markdown !important  
-# document: http://jekyllrb.com/docs/configuration/#kramdown  
+# Build settings
+# use Github Flavored Markdown !important
+# document: http://jekyllrb.com/docs/configuration/#kramdown
 markdown: kramdown
 highlighter: rouge
 permalink: pretty
@@ -38,7 +38,7 @@ timezone: Asia/Shanghai
 # Defaults for posts
 defaults:
   -
-    scope: 
+    scope:
       path: ""
       type: "posts"
     values:
@@ -46,7 +46,7 @@ defaults:
       author: "Freeeeeedom" # 你的名字
       header-img: "img/cuta.png" # We don't want posts without a header image, that whould mean white on white
 
-# Comments 
+# Comments
 comments :
   provider : disqus # 使用 disqus 评论模块，读者翻墙才能看见
   duoshuo :
