--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ douban_username:  # 你的豆瓣id
 twitter_username: Freeeeeedooms
 github_username:
 facebook_username:
-weibo_username:
+weibo_username: xshawm
 zhihu_username:
 
 # Build settings
