--- a/_config.yml
+++ b/_config.yml
@@ -18,9 +18,9 @@ favicon: img/favicon.png # 浏览器地址栏小图标，可自定义更改
 
 douban_username:  # 你的豆瓣id
 twitter_username: Freeeeeedooms
-github_username:
+github_username: freeeeeedom
 facebook_username:
-weibo_username: xshawm
+weibo_username: 2111880903
 zhihu_username:
 
 # Build settings
